# gemma4-moe-flash-mlx-turbo

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  FUTURE_OPTIMIZATIONS.md  README.md  build.rs  pyproject.toml  run.py
flash_qwen/: __init__.py  engine.py  model.py  split.py  turbo_quant.py
flash_qwen/libflash_expert.dylib.dSYM/Contents/: Info.plist
flash_qwen/libflash_expert.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libflash_expert.dylib.yml
split_model/: config.json  split_config.json  tokenizer_config.json
split_model/resident/: model.safetensors.index.json
src/: api_types.rs  cache.rs  config.rs  engine.rs  expert_store.rs  ffi.rs  ffi_zerocopy.cpp  lib.rs  main.rs  memory.rs  perf.rs  server.rs  splitter.rs  tokenizer.rs
src/model/: gated_delta.rs  gemma4_attention.rs  mlp.rs  mod.rs  moe.rs  norm.rs
sweep_tau_logs_study/: sweep_tau.sh  sweep_tau_results.txt
