[package]
name = "flash_expert"
version = "0.1.0"
edition = "2021"

[lib]
name = "flash_expert"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
safetensors = "0.5"
rayon = "1.10"
libc = "0.2"
lru = "0.14"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
