[package]
name = "flash-moe"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "flash-moe"
path = "src/main.rs"

[build-dependencies]
cc = "1"
glob = "0.3"
mlx-sys = "0.2"

[dependencies]
mlx-rs = "0.25"
mlx-sys = "0.2"
tokenizers = "0.21"
minijinja = "2"
memmap2 = "0.9"
rayon = "1.10"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
async-stream = "0.3"
