[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "flash-qwen"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "mlx>=0.29",
    "mlx-lm>=0.29",
    "numpy",
    "transformers",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "flash_qwen._native"
